// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login should render correctly with a user 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Login
    logIn={[Function]}
    logOut={[Function]}
    user={
        Object {
            "userEmail": "Jordan@Project.com",
            "userId": "fancy encryption",
            "userName": "Jordan",
            "userPhoto": "photo-url",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div>
        <h1>
                 WELCOME
        </h1>
        <h3
                className="name"
        >
                Jordan
                 
        </h3>
        <img
                alt="user"
                className="profile-picture"
                src="photo-url"
        />
        <button
                className="logout"
                onClick={[Function]}
        >
                 LOG OUT
        </button>
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
             WELCOME
</h1>,
          <h3
            className="name"
>
            Jordan
             
</h3>,
          <img
            alt="user"
            className="profile-picture"
            src="photo-url"
/>,
          <button
            className="logout"
            onClick={[Function]}
>
             LOG OUT
</button>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": " WELCOME",
          },
          "ref": null,
          "rendered": " WELCOME",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Jordan",
              " ",
            ],
            "className": "name",
          },
          "ref": null,
          "rendered": Array [
            "Jordan",
            " ",
          ],
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "user",
            "className": "profile-picture",
            "src": "photo-url",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": " LOG OUT",
            "className": "logout",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": " LOG OUT",
          "type": "button",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div>
          <h1>
                     WELCOME
          </h1>
          <h3
                    className="name"
          >
                    Jordan
                     
          </h3>
          <img
                    alt="user"
                    className="profile-picture"
                    src="photo-url"
          />
          <button
                    className="logout"
                    onClick={[Function]}
          >
                     LOG OUT
          </button>
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1>
               WELCOME
</h1>,
            <h3
              className="name"
>
              Jordan
               
</h3>,
            <img
              alt="user"
              className="profile-picture"
              src="photo-url"
/>,
            <button
              className="logout"
              onClick={[Function]}
>
               LOG OUT
</button>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": " WELCOME",
            },
            "ref": null,
            "rendered": " WELCOME",
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Jordan",
                " ",
              ],
              "className": "name",
            },
            "ref": null,
            "rendered": Array [
              "Jordan",
              " ",
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "user",
              "className": "profile-picture",
              "src": "photo-url",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": " LOG OUT",
              "className": "logout",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": " LOG OUT",
            "type": "button",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`Login should render correctly without a user 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Login
    logIn={[Function]}
    logOut={[Function]}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div>
        <div
                className="header-container"
        >
                <img
                        alt="Roastr Logo"
                        className="header-triagle"
                        src="header-triangle_2.svg"
                />
        </div>
        <h3>
                 welcome to 
        </h3>
        <img
                alt="Roastr logo"
                className="landing-logo"
                src="logo.svg"
        />
        <e
                firebaseAuth={
                        Object {
                                "apiKey": "AIzaSyBYOjbvNWIvFDu-9R6gR4PcBqkYt5H98g4",
                                "appName": "[DEFAULT]",
                                "authDomain": "roastr-e35c3.firebaseapp.com",
                                "currentUser": null,
                              }
                }
                uiConfig={
                        Object {
                                "callbacks": Object {
                                  "signInSuccess": [Function],
                                },
                                "signInFlow": "popup",
                                "signInOptions": Array [
                                  "google.com",
                                ],
                              }
                }
        />
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="header-container"
>
            <img
                        alt="Roastr Logo"
                        className="header-triagle"
                        src="header-triangle_2.svg"
            />
</div>,
          <h3>
             welcome to 
</h3>,
          <img
            alt="Roastr logo"
            className="landing-logo"
            src="logo.svg"
/>,
          <e
            firebaseAuth={
                        Object {
                                    "apiKey": "AIzaSyBYOjbvNWIvFDu-9R6gR4PcBqkYt5H98g4",
                                    "appName": "[DEFAULT]",
                                    "authDomain": "roastr-e35c3.firebaseapp.com",
                                    "currentUser": null,
                                  }
            }
            uiConfig={
                        Object {
                                    "callbacks": Object {
                                      "signInSuccess": [Function],
                                    },
                                    "signInFlow": "popup",
                                    "signInOptions": Array [
                                      "google.com",
                                    ],
                                  }
            }
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <img
              alt="Roastr Logo"
              className="header-triagle"
              src="header-triangle_2.svg"
/>,
            "className": "header-container",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "Roastr Logo",
              "className": "header-triagle",
              "src": "header-triangle_2.svg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": " welcome to ",
          },
          "ref": null,
          "rendered": " welcome to ",
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "Roastr logo",
            "className": "landing-logo",
            "src": "logo.svg",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "firebaseAuth": Object {
              "apiKey": "AIzaSyBYOjbvNWIvFDu-9R6gR4PcBqkYt5H98g4",
              "appName": "[DEFAULT]",
              "authDomain": "roastr-e35c3.firebaseapp.com",
              "currentUser": null,
            },
            "uiConfig": Object {
              "callbacks": Object {
                "signInSuccess": [Function],
              },
              "signInFlow": "popup",
              "signInOptions": Array [
                "google.com",
              ],
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div>
          <div
                    className="header-container"
          >
                    <img
                              alt="Roastr Logo"
                              className="header-triagle"
                              src="header-triangle_2.svg"
                    />
          </div>
          <h3>
                     welcome to 
          </h3>
          <img
                    alt="Roastr logo"
                    className="landing-logo"
                    src="logo.svg"
          />
          <e
                    firebaseAuth={
                              Object {
                                        "apiKey": "AIzaSyBYOjbvNWIvFDu-9R6gR4PcBqkYt5H98g4",
                                        "appName": "[DEFAULT]",
                                        "authDomain": "roastr-e35c3.firebaseapp.com",
                                        "currentUser": null,
                                      }
                    }
                    uiConfig={
                              Object {
                                        "callbacks": Object {
                                          "signInSuccess": [Function],
                                        },
                                        "signInFlow": "popup",
                                        "signInOptions": Array [
                                          "google.com",
                                        ],
                                      }
                    }
          />
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="header-container"
>
              <img
                            alt="Roastr Logo"
                            className="header-triagle"
                            src="header-triangle_2.svg"
              />
</div>,
            <h3>
               welcome to 
</h3>,
            <img
              alt="Roastr logo"
              className="landing-logo"
              src="logo.svg"
/>,
            <e
              firebaseAuth={
                            Object {
                                          "apiKey": "AIzaSyBYOjbvNWIvFDu-9R6gR4PcBqkYt5H98g4",
                                          "appName": "[DEFAULT]",
                                          "authDomain": "roastr-e35c3.firebaseapp.com",
                                          "currentUser": null,
                                        }
              }
              uiConfig={
                            Object {
                                          "callbacks": Object {
                                            "signInSuccess": [Function],
                                          },
                                          "signInFlow": "popup",
                                          "signInOptions": Array [
                                            "google.com",
                                          ],
                                        }
              }
/>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <img
                alt="Roastr Logo"
                className="header-triagle"
                src="header-triangle_2.svg"
/>,
              "className": "header-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "Roastr Logo",
                "className": "header-triagle",
                "src": "header-triangle_2.svg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": " welcome to ",
            },
            "ref": null,
            "rendered": " welcome to ",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "Roastr logo",
              "className": "landing-logo",
              "src": "logo.svg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "firebaseAuth": Object {
                "apiKey": "AIzaSyBYOjbvNWIvFDu-9R6gR4PcBqkYt5H98g4",
                "appName": "[DEFAULT]",
                "authDomain": "roastr-e35c3.firebaseapp.com",
                "currentUser": null,
              },
              "uiConfig": Object {
                "callbacks": Object {
                  "signInSuccess": [Function],
                },
                "signInFlow": "popup",
                "signInOptions": Array [
                  "google.com",
                ],
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
